--- a/server/package.json
+++ b/server/package.json
@@ -1,24 +1,23 @@
 {
   "name": "testing-server",
-  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/index.ts",
-    "start": "node dist/index.js",
-    "build": "tsc -p tsconfig.json"
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/index.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.6.1",
-    "express": "^4.21.2",
-    "mqtt": "^5.14.0",
-    "socket.io": "^4.8.1"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "mqtt": "^5.6.0",
+    "socket.io": "^4.7.5"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.19",
-    "@types/express": "^4.17.23",
-    "@types/node": "^20.19.11",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.14.9",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4"
   }
