--- a/web/package.json
+++ b/web/package.json
@@ -5,15 +5,20 @@
     "preview": "vite preview --port 5173"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "socket.io-client": "^4.7.5"
+    "react-router-dom": "^7.8.2",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
-    "vite": "^5.0.0",
-    "typescript": "^5.5.4",
     "@types/node": "^20.14.9",
     "@types/react": "^18.2.73",
-    "@types/react-dom": "^18.2.23"
+    "@types/react-dom": "^18.2.23",
+    "typescript": "^5.5.4",
+    "vite": "^5.0.0"
   }
 }
