--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -1,18 +1,20 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ES2020", "DOM"],
     "module": "ESNext",
     "moduleResolution": "bundler",
     "jsx": "react-jsx",
-
     "strict": true,
     "skipLibCheck": true,
-    "noEmit": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
-
-    "types": ["vite/client"]        // ← ให้ TS เห็น type ของ Vite
+    "noEmit": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
-  "include": ["src"]
+  "include": ["src"],
+  "exclude": ["node_modules", "dist"]
 }
